--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
   "name": "@ic3/demo-plugin-theme",
-  "version": "8.0.0-alpha.8",
+  "version": "8.0.0-alpha.9",
   "description": "icCube dashboards plugin: Javascript",
   "homepage": "https://github.com/iccube-software/ic3-demo-plugin-theme",
   "repository": "https://github.com/iccube-software/ic3-demo-plugin-theme",
   "private": true,
   "dependencies": {
-    "@ic3/reporting-api": "8.0.0-alpha.8"
+    "@ic3/reporting-api": "8.0.0-alpha.9"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
     "@babel/preset-env": "7.14.7",
     "@babel/preset-react": "7.14.5",
     "@iccube/webfontloader": "1.0.0",
-    "@material-ui/core": "5.0.0-alpha.38",
-    "@types/lodash": "4.14.170",
-    "@types/react": "17.0.11",
-    "@types/react-dom": "17.0.8",
-    "@typescript-eslint/eslint-plugin": "4.28.0",
-    "@typescript-eslint/parser": "4.28.0",
+    "@material-ui/core": "5.0.0-beta.0",
+    "@types/lodash": "4.14.171",
+    "@types/react": "17.0.14",
+    "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
     "adm-zip": "0.5.5",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "4.0.0-alpha.0",
     "del-cli": "4.0.0",
-    "eslint": "7.29.0",
+    "eslint": "7.30.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
@@ -32,8 +32,8 @@
     "html-webpack-plugin": "5.3.2",
     "raw-loader": "4.0.2",
     "ts-loader": "9.2.3",
-    "typescript": "4.3.4",
-    "webpack": "5.40.0",
+    "typescript": "4.3.5",
+    "webpack": "5.44.0",
     "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.8.0"
