--- a/package.json
+++ b/package.json
@@ -1,41 +1,40 @@
 {
   "name": "@ic3/demo-plugin-theme",
-  "version": "8.0.0-alpha.12",
+  "version": "8.0.0-alpha.15",
   "description": "icCube dashboards plugin: Javascript",
-  "homepage": "https://github.com/iccube-software/ic3-demo-plugin-theme",
-  "repository": "https://github.com/iccube-software/ic3-demo-plugin-theme",
+  "homepage": "https://github.com/ic3-software/ic3-demo-plugin-theme",
+  "repository": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "private": true,
   "dependencies": {
-    "@ic3/reporting-api": "8.0.0-alpha.12"
+    "@ic3/reporting-api": "8.0.0-alpha.15"
   },
   "devDependencies": {
-    "@babel/core": "7.15.0",
-    "@babel/preset-env": "7.15.0",
+    "@babel/core": "7.15.8",
+    "@babel/preset-env": "7.15.8",
     "@babel/preset-react": "7.14.5",
     "@iccube/webfontloader": "1.0.0",
-    "@material-ui/core": "5.0.0-beta.4",
-    "@types/lodash": "4.14.172",
-    "@types/react": "17.0.18",
-    "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "4.29.1",
-    "@typescript-eslint/parser": "4.29.1",
-    "adm-zip": "0.5.5",
-    "babel-loader": "8.2.2",
-    "clean-webpack-plugin": "4.0.0-alpha.0",
+    "@mui/material": "5.0.4",
+    "@types/lodash": "4.14.176",
+    "@types/react": "17.0.32",
+    "@types/react-dom": "17.0.10",
+    "@typescript-eslint/eslint-plugin": "5.1.0",
+    "@typescript-eslint/parser": "5.1.0",
+    "adm-zip": "0.5.9",
+    "babel-loader": "8.2.3",
+    "clean-webpack-plugin": "4.0.0",
     "del-cli": "4.0.1",
     "eslint": "7.32.0",
-    "eslint-loader": "4.0.2",
-    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "6.3.2",
-    "html-webpack-plugin": "5.3.2",
+    "fork-ts-checker-webpack-plugin": "6.4.0",
+    "html-webpack-plugin": "5.4.0",
     "raw-loader": "4.0.2",
-    "ts-loader": "9.2.5",
-    "typescript": "4.3.5",
-    "webpack": "5.50.0",
-    "webpack-cli": "4.8.0",
-    "webpack-dev-server": "3.11.2",
+    "ts-loader": "9.2.6",
+    "typescript": "4.4.4",
+    "webpack": "5.59.1",
+    "webpack-cli": "4.9.1",
+    "webpack-dev-server": "4.3.1",
     "webpack-merge": "5.8.0"
   },
   "scripts": {
