--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
   "name": "@ic3/demo-plugin-theme",
-  "version": "8.0.0-rc.3",
+  "version": "8.0.0-rc.4",
   "description": "icCube dashboards plugin: Javascript",
   "homepage": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "repository": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "private": true,
   "dependencies": {
-    "@ic3/reporting-api": "8.0.0-rc.3"
+    "@ic3/reporting-api": "8.0.0-rc.4"
   },
   "devDependencies": {
-    "@babel/core": "7.16.7",
-    "@babel/preset-env": "7.16.8",
+    "@babel/core": "7.17.0",
+    "@babel/preset-env": "7.16.11",
     "@babel/preset-react": "7.16.7",
     "@iccube/webfontloader": "1.0.0",
-    "@mui/material": "5.3.0",
+    "@mui/material": "5.4.0",
+    "@mui/x-data-grid-pro": "5.5.0",
     "@types/lodash": "4.14.178",
-    "@types/react": "17.0.38",
+    "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
-    "@typescript-eslint/eslint-plugin": "5.10.0",
-    "@typescript-eslint/parser": "5.10.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "adm-zip": "0.5.9",
     "babel-loader": "8.2.3",
     "clean-webpack-plugin": "4.0.0",
     "del-cli": "4.0.1",
-    "eslint": "7.32.0",
+    "eslint": "8.8.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-webpack-plugin": "3.1.1",
     "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "6.5.0",
+    "fork-ts-checker-webpack-plugin": "7.1.1",
     "html-webpack-plugin": "5.5.0",
     "raw-loader": "4.0.2",
     "ts-loader": "9.2.6",
-    "typescript": "4.5.4",
-    "webpack": "5.66.0",
-    "webpack-cli": "4.9.1",
-    "webpack-dev-server": "4.7.3",
+    "typescript": "4.5.5",
+    "webpack": "5.68.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.7.4",
     "webpack-merge": "5.8.0"
   },
   "scripts": {
