--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
   "name": "@ic3/demo-plugin-theme",
-  "version": "8.2.2",
+  "version": "8.3.0",
   "description": "icCube dashboards plugin: Javascript",
   "homepage": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "repository": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "private": true,
   "dependencies": {
-    "@ic3/reporting-api": "8.2.2"
+    "@ic3/reporting-api": "8.3.0",
+    "@fontsource/rubik": "4.5.13"
   },
   "devDependencies": {
-    "@babel/core": "7.18.13",
-    "@babel/preset-env": "7.18.10",
+    "css-loader": "6.7.3",
+    "style-loader": "3.3.1",
+    "@babel/core": "7.20.7",
+    "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@iccube/webfontloader": "1.0.0",
-    "@mui/material": "5.10.3",
-    "@typescript-eslint/eslint-plugin": "5.36.1",
-    "@typescript-eslint/parser": "5.36.1",
-    "adm-zip": "0.5.9",
-    "babel-loader": "8.2.5",
+    "@mui/material": "5.11.2",
+    "@typescript-eslint/eslint-plugin": "5.47.1",
+    "@typescript-eslint/parser": "5.47.1",
+    "adm-zip": "0.5.10",
+    "babel-loader": "9.1.0",
     "clean-webpack-plugin": "4.0.0",
     "del-cli": "5.0.0",
-    "eslint": "8.22.0",
-    "eslint-plugin-react": "7.31.6",
+    "eslint": "8.30.0",
+    "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-webpack-plugin": "3.2.0",
     "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "7.2.13",
+    "fork-ts-checker-webpack-plugin": "7.2.14",
     "html-webpack-plugin": "5.5.0",
     "raw-loader": "4.0.2",
-    "ts-loader": "9.3.1",
-    "typescript": "4.8.2",
-    "webpack": "5.74.0",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.10.1",
+    "ts-loader": "9.4.2",
+    "typescript": "4.9.4",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.11.1",
     "webpack-merge": "5.8.0"
   },
   "scripts": {
