--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
   "name": "@ic3/demo-plugin-theme",
-  "version": "8.3.0",
+  "version": "8.4.0-alpha.1",
   "description": "icCube dashboards plugin: Javascript",
   "homepage": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "repository": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "private": true,
   "dependencies": {
-    "@ic3/reporting-api": "8.3.0",
-    "@fontsource/rubik": "4.5.13"
+    "@ic3/reporting-api": "8.4.0-alpha.1",
+    "@fontsource/rubik": "4.5.14"
   },
   "devDependencies": {
     "css-loader": "6.7.3",
     "style-loader": "3.3.1",
-    "@babel/core": "7.20.7",
+    "@babel/core": "7.21.0",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@iccube/webfontloader": "1.0.0",
-    "@mui/material": "5.11.2",
-    "@typescript-eslint/eslint-plugin": "5.47.1",
-    "@typescript-eslint/parser": "5.47.1",
+    "@mui/material": "5.11.12",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
     "adm-zip": "0.5.10",
-    "babel-loader": "9.1.0",
+    "babel-loader": "9.1.2",
     "clean-webpack-plugin": "4.0.0",
     "del-cli": "5.0.0",
-    "eslint": "8.30.0",
-    "eslint-plugin-react": "7.31.11",
+    "eslint": "8.36.0",
+    "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-webpack-plugin": "3.2.0",
     "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "7.2.14",
+    "fork-ts-checker-webpack-plugin": "7.3.0",
     "html-webpack-plugin": "5.5.0",
     "raw-loader": "4.0.2",
     "ts-loader": "9.4.2",
-    "typescript": "4.9.4",
-    "webpack": "5.75.0",
+    "typescript": "4.9.5",
+    "webpack": "5.76.1",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1",
     "webpack-merge": "5.8.0"
