--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "name": "@ic3/demo-plugin-theme",
-  "version": "8.4.1",
+  "version": "8.4.2-alpha.1",
   "description": "icCube dashboards plugin: Javascript",
   "homepage": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "repository": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "private": true,
   "dependencies": {
-    "@ic3/reporting-api": "8.4.1",
-    "@fontsource/rubik": "4.5.14"
+    "@ic3/reporting-api": "8.4.2-alpha.1",
+    "@fontsource/rubik": "5.0.1"
   },
   "devDependencies": {
-    "css-loader": "6.7.3",
-    "style-loader": "3.3.2",
-    "@babel/core": "7.21.5",
+    "css-loader": "6.7.4",
+    "style-loader": "3.3.3",
+    "@babel/core": "7.21.8",
     "@babel/preset-env": "7.21.5",
     "@babel/preset-react": "7.18.6",
     "@iccube/webfontloader": "1.0.0",
-    "@typescript-eslint/eslint-plugin": "5.59.1",
-    "@typescript-eslint/parser": "5.59.1",
+    "@typescript-eslint/eslint-plugin": "5.59.7",
+    "@typescript-eslint/parser": "5.59.7",
     "adm-zip": "0.5.10",
     "babel-loader": "9.1.2",
     "clean-webpack-plugin": "4.0.0",
     "del-cli": "5.0.0",
-    "eslint": "8.39.0",
+    "eslint": "8.41.0",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-webpack-plugin": "4.0.1",
@@ -30,12 +30,12 @@
     "fork-ts-checker-webpack-plugin": "8.0.0",
     "html-webpack-plugin": "5.5.1",
     "raw-loader": "4.0.2",
-    "ts-loader": "9.4.2",
+    "ts-loader": "9.4.3",
     "typescript": "4.9.5",
-    "webpack": "5.81.0",
-    "webpack-cli": "5.0.2",
-    "webpack-dev-server": "4.13.3",
-    "webpack-merge": "5.8.0"
+    "webpack": "5.84.0",
+    "webpack-cli": "5.1.1",
+    "webpack-dev-server": "4.15.0",
+    "webpack-merge": "5.9.0"
   },
   "scripts": {
     "start ic3-demo-plugin-theme": "webpack serve --config ./webpack.dev.js",
