--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "@ic3/demo-plugin-theme",
-  "version": "8.4.8",
+  "version": "8.4.9",
   "description": "icCube dashboards plugin: Javascript",
   "homepage": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "repository": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "private": true,
   "dependencies": {
-    "@ic3/reporting-api": "8.4.8",
-    "@fontsource/rubik": "5.0.18"
+    "@ic3/reporting-api": "8.4.9",
+    "@fontsource/rubik": "5.0.18",
+    "@fontsource/raleway": "5.0.16"
   },
   "devDependencies": {
-    "css-loader": "6.9.0",
+    "css-loader": "6.9.1",
     "style-loader": "3.3.4",
-    "@babel/core": "7.23.7",
-    "@babel/preset-env": "7.23.8",
+    "@babel/core": "7.23.9",
+    "@babel/preset-env": "7.23.9",
     "@babel/preset-react": "7.23.3",
-    "@iccube/webfontloader": "1.0.0",
-    "@typescript-eslint/eslint-plugin": "6.19.0",
-    "@typescript-eslint/parser": "6.19.0",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
     "adm-zip": "0.5.10",
     "babel-loader": "9.1.3",
     "clean-webpack-plugin": "4.0.0",
@@ -32,7 +32,7 @@
     "raw-loader": "4.0.2",
     "ts-loader": "9.5.1",
     "typescript": "5.3.3",
-    "webpack": "5.89.0",
+    "webpack": "5.90.0",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1",
     "webpack-merge": "5.10.0"
