--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
   "name": "@ic3/demo-plugin-theme",
-  "version": "8.4.9",
+  "version": "8.4.10",
   "description": "icCube dashboards plugin: Javascript",
   "homepage": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "repository": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "private": true,
   "dependencies": {
-    "@ic3/reporting-api": "8.4.9",
-    "@fontsource/rubik": "5.0.18",
-    "@fontsource/raleway": "5.0.16"
+    "@ic3/reporting-api": "8.4.10",
+    "@fontsource/raleway": "5.0.17",
+    "@fontsource/rubik": "5.0.19"
   },
   "devDependencies": {
-    "css-loader": "6.9.1",
+    "css-loader": "6.10.0",
     "style-loader": "3.3.4",
-    "@babel/core": "7.23.9",
-    "@babel/preset-env": "7.23.9",
-    "@babel/preset-react": "7.23.3",
-    "@typescript-eslint/eslint-plugin": "6.20.0",
-    "@typescript-eslint/parser": "6.20.0",
-    "adm-zip": "0.5.10",
+    "@babel/core": "7.24.3",
+    "@babel/preset-env": "7.24.3",
+    "@babel/preset-react": "7.24.1",
+    "@typescript-eslint/eslint-plugin": "7.4.0",
+    "@typescript-eslint/parser": "7.4.0",
+    "adm-zip": "0.5.12",
     "babel-loader": "9.1.3",
     "clean-webpack-plugin": "4.0.0",
     "del-cli": "5.1.0",
-    "eslint": "8.56.0",
-    "eslint-plugin-react": "7.33.2",
+    "eslint": "8.57.0",
+    "eslint-plugin-react": "7.34.1",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-webpack-plugin": "4.0.1",
+    "eslint-webpack-plugin": "4.1.0",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "9.0.2",
     "html-webpack-plugin": "5.6.0",
     "raw-loader": "4.0.2",
     "ts-loader": "9.5.1",
-    "typescript": "5.3.3",
-    "webpack": "5.90.0",
+    "typescript": "5.4.3",
+    "webpack": "5.91.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1",
+    "webpack-dev-server": "5.0.4",
     "webpack-merge": "5.10.0"
   },
   "scripts": {
