--- a/package.json
+++ b/package.json
@@ -1,43 +1,47 @@
 {
   "name": "@ic3/demo-plugin-theme",
-  "version": "9.0.1",
-  "description": "icCube dashboards plugin: Javascript",
+  "version": "9.1.0",
+  "description": "icCube dashboards plugin: JavaScript",
   "homepage": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "repository": "https://github.com/ic3-software/ic3-demo-plugin-theme",
   "private": true,
   "dependencies": {
-    "@ic3/reporting-api": "9.0.1",
-    "@fontsource/raleway": "5.2.6",
-    "@fontsource/rubik": "5.2.6"
+    "@ic3/reporting-api": "9.1.0",
+    "react": "18.x",
+    "react-dom": "18.x",
+    "@fontsource/raleway": "5.2.8",
+    "@fontsource/rubik": "5.2.8"
   },
   "devDependencies": {
+    "@ic3/common-api" : "1.0.2",
     "css-loader": "7.1.2",
     "style-loader": "4.0.0",
-    "@babel/core": "7.28.3",
-    "@babel/preset-env": "7.28.3",
-    "@babel/preset-react": "7.27.1",
-    "@typescript-eslint/eslint-plugin": "8.40.0",
-    "@typescript-eslint/parser": "8.40.0",
+    "@babel/core": "7.28.5",
+    "@babel/preset-env": "7.28.5",
+    "@babel/preset-react": "7.28.5",
+    "@typescript-eslint/eslint-plugin": "8.49.0",
+    "@typescript-eslint/parser": "8.49.0",
     "adm-zip": "0.5.16",
     "babel-loader": "10.0.0",
     "clean-webpack-plugin": "4.0.0",
-    "del-cli": "6.0.0",
+    "del-cli": "7.0.0",
     "eslint": "8.57.1",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-webpack-plugin": "4.2.0",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "9.1.0",
-    "html-webpack-plugin": "5.6.4",
+    "html-webpack-plugin": "5.6.5",
     "raw-loader": "4.0.2",
-    "ts-loader": "9.5.2",
+    "ts-loader": "9.5.4",
     "typescript": "5.8.3",
-    "webpack": "5.101.3",
+    "webpack": "5.105.2",
     "webpack-cli": "6.0.1",
     "webpack-dev-server": "5.2.2",
     "webpack-merge": "6.0.1"
   },
   "scripts": {
+    "rebuild": "rm -rf node_modules && rm -f package-lock.json && npm i && npm run build",
     "start ic3-demo-plugin-theme": "webpack serve --config ./webpack.dev.js",
     "build": "del-cli dist && webpack --config ./webpack.prod.js",
     "zip": "node ./bin/zip.js",
